--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 </head>
 <body>
-
+	<dir class="background"> 
+		<div class="Nav-Bar">
+			<h1> hello world </h1>
+		</div>
+	</dir>
 </body>
 </html>
